fixed issue with contact text being too high

--- a/src/App.css
+++ b/src/App.css
@@ -169,13 +169,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', end
   }
 
   .contact {
-    font-size: 30px;
+    font-size: 30px;    
   }
 }
 
 @media (min-width: 1070px) {
   .contact {
     font-size: 40px;
+    margin-top: 100px;
   }
   .navbar-center {
     display: flex;
